--- a/sequlize-autoload-models/package.json
+++ b/sequlize-autoload-models/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@c_kai/sequlize-autoload-models",
-  "version": "1.0.4",
-  "description": "pg helper utils",
+  "version": "1.0.5",
+  "description": "sequlize autoload models",
   "main": "index.js",
   "repository": "https://github.com/chenkai0520/node_modules/tree/main/sequlize-autoload-models",
   "author": "chenkai0520",
